--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,14 @@
-TRON_PRIVATE_KEY="Your Private Key"
-PAY_TO_ADDRESS="Your PayTo Address"
+# X402 TRON Demo - Environment Variables
+# Copy this file to .env and fill in your values
+
+# TRON Private Key (Required)
+# Get test TRX and USDT from: https://nileex.io/join/getJoinPage
+TRON_PRIVATE_KEY=your_private_key_here
+
+# Pay To Address (Required for server)
+# The TRON address that will receive payments
+PAY_TO_ADDRESS=your_tron_address_here
+
+# Optional: Supported networks for client/web (default: nile)
+# Comma-separated list of networks: nile, shasta, mainnet
+# VITE_SUPPORTED_NETWORKS=nile
