--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 # Install with: pip install -r requirements.txt
 
 # Core x402-tron SDK with TRON and FastAPI support (source branch)
-x402-tron[tron,fastapi] @ git+https://github.com/bankofai/x402-tron@fix/server_endpoint#subdirectory=python/x402
+x402-tron[tron,fastapi] @ git+https://github.com/bankofai/x402-tron@v0.2.0#subdirectory=python/x402
 
 # Web framework
 fastapi>=0.104.0
