--- a/.env.sample
+++ b/.env.sample
@@ -19,3 +19,15 @@ BSC_PAY_TO_ADDRESS=your_evm_address_here
 # Facilitator API Key (Optional)
 # When facilitator requires X-API-KEY for auth, set this to match the key in facilitator's api_keys table
 # FACILITATOR_API_KEY=your_api_key_here
+
+# -----------------------------------------------------------------------------
+# A2A Demo Settings
+# -----------------------------------------------------------------------------
+
+# Google Gemini API Key (Required for A2A Demo)
+# Get it at https://ai.google.dev/gemini-api/docs/api-key
+GOOGLE_API_KEY=your_google_api_key_here
+
+# Facilitator Service URL (Required for A2A Demo)
+# Responsible for on-chain verification and settlement
+FACILITATOR_URL=https://facilitator.bankofai.io
