--- a/.env.sample
+++ b/.env.sample
@@ -20,6 +20,11 @@ BSC_PAY_TO_ADDRESS=your_evm_address_here
 # When facilitator requires X-API-KEY for auth, set this to match the key in facilitator's api_keys table
 # FACILITATOR_API_KEY=your_api_key_here
 
+# GasFree API Configuration (Optional)
+# Used for gasless transactions via GasFree service
+# GASFREE_API_KEY=your_gasfree_api_key_here
+# GASFREE_API_SECRET=your_gasfree_api_secret_here
+
 # -----------------------------------------------------------------------------
 # A2A Demo Settings
 # -----------------------------------------------------------------------------
