support multi-network

--- a/.env.sample
+++ b/.env.sample
@@ -22,8 +22,19 @@ BSC_PAY_TO_ADDRESS=your_evm_address_here
 
 # GasFree API Configuration (Optional)
 # Used for gasless transactions via GasFree service
+# Global keys (fallback)
 # GASFREE_API_KEY=your_gasfree_api_key_here
 # GASFREE_API_SECRET=your_gasfree_api_secret_here
+
+# Network specific keys (e.g. for Nile)
+# GASFREE_API_KEY_NILE=your_gasfree_api_key_nile_here
+# GASFREE_API_SECRET_NILE=your_gasfree_api_secret_nile_here
+
+# GASFREE_API_KEY_SHASTA=your_gasfree_api_key_shasta_here
+# GASFREE_API_SECRET_SHASTA=your_gasfree_api_secret_shasta_here
+
+# GASFREE_API_KEY_MAINNET=your_gasfree_api_key_mainnet_here
+# GASFREE_API_SECRET_MAINNET=your_gasfree_api_secret_mainnet_here
 
 # -----------------------------------------------------------------------------
 # A2A Demo Settings
