--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # X402 TRON Demo - Python Dependencies
 # Install with: pip install -r requirements.txt
 
-# Core bankofai-x402 SDK with TRON and FastAPI support (GitHub master branch)
-bankofai-x402[tron,fastapi] @ git+https://github.com/bankofai/x402.git@v0.3.1#subdirectory=python/x402
+# Core bankofai-x402 SDK with TRON and FastAPI support (GitHub tag)
+bankofai-x402[tron,fastapi] @ git+https://github.com/bankofai/x402.git@v0.4.0#subdirectory=python/x402
 
 # Web framework
 fastapi>=0.104.0
